# western-blot-tool-package

./: LICENSE  README.md  pyproject.toml
src/wbtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/wbtool_package/: wbtool — копия.py  wbtool.py
